# plasma-firewall

./: .gitignore  .kde-ci.yml  01-lazy-dev.rules  CMakeLists.txt  INSTALL  README.md  org.kde.plasma.firewall.metainfo.xml
autotests/: CMakeLists.txt  ipvalidatortest.cpp
kcm/: CMakeLists.txt  Messages.sh  kcm.cpp  kcm.h  kcm_firewall.desktop  kcm_firewall.json  version.h.cmake
kcm/backends/: CMakeLists.txt
kcm/backends/firewalld/: CMakeLists.txt  blocker.h  dbustypes.cpp  dbustypes.h  firewalldbackend.json  firewalldclient.cpp  firewalldclient.h  firewalldjob.cpp  firewalldjob.h  firewalldlogmodel.cpp  firewalldlogmodel.h  queryrulesfirewalldjob.cpp  queryrulesfirewalldjob.h  systemdjob.cpp  systemdjob.h
kcm/backends/firewalld/interface/: CMakeLists.txt  firewalld_interface_config.h.cmake  helper.cpp  helper.h  org.kde.firewalld.actions  org.kde.firewalld.service.cmake
kcm/backends/netstat/: CMakeLists.txt  conectionsmodel.cpp  conectionsmodel.h  connectionsmodel.cpp  netstatclient.cpp  netstatclient.h  netstathelper.cpp  netstathelper.h
kcm/backends/netstat/helper/: CMakeLists.txt  netstathelper.cpp  netstathelper.h  org.kde.netstat.actions
kcm/backends/ufw/: CMakeLists.txt  blocker.cpp  blocker.h  ufwbackend.json  ufwclient.cpp  ufwclient.h  ufwlogmodel.cpp  ufwlogmodel.h
kcm/backends/ufw/helper/: CMakeLists.txt  helper.cpp  helper.h  kcm_ufw_helper.py.cmake  org.kde.ufw.actions
kcm/core/: CMakeLists.txt  appprofiles.cpp  appprofiles.h  firewallclient.cpp  firewallclient.h  ifirewallclientbackend.cpp  ifirewallclientbackend.h  ipvalidator.cpp  ipvalidator.h  loglistmodel.cpp  loglistmodel.h  profile.cpp  profile.h  rule.cpp  rule.h  rulelistmodel.cpp  rulelistmodel.h  rulewrapper.cpp  rulewrapper.h  systemdjob.cpp  systemdjob.h  types.cpp  types.h
kcm/package/: metadata.desktop
kcm/package/contents/ui/: About.qml  AdvancedRuleEdit.qml  ConnectionItemDelegate.qml  ConnectionsView.qml  DynamicFirewallRules.qml  FirewallClientInlineMessages.qml  FirewallInlineMessage.qml  InlineBusyIndicator.qml  IpTextField.qml  IpV4TextField.qml  IpV6TextField.qml  LogItemDelegate.qml  LogsView.qml  PortTextField.qml  RuleEdit.qml  RuleListItem.qml  SimpleRuleEdit.qml  ViewBase.qml  main.qml
kcm/ui/: About.qml  AdvancedRuleEdit.qml  RuleEdit.qml  RuleListItem.qml  SimpleRuleEdit.qml  ViewBase.qml  main.qml
po/ar/: kcm_firewall.po
po/ast/: kcm_firewall.po
po/az/: kcm_firewall.po
po/bg/: kcm_firewall.po
po/ca/: kcm_firewall.po
po/ca@valencia/: kcm_firewall.po
po/cs/: kcm_firewall.po
po/da/: kcm_firewall.po
po/de/: kcm_firewall.po
po/en_GB/: kcm_firewall.po
po/eo/: kcm_firewall.po
po/es/: kcm_firewall.po
po/et/: kcm_firewall.po
po/eu/: kcm_firewall.po
po/fi/: kcm_firewall.po
po/fr/: kcm_firewall.po
po/ga/: kcm_firewall.po
po/gl/: kcm_firewall.po
po/he/: kcm_firewall.po
po/hi/: kcm_firewall.po
po/hu/: kcm_firewall.po
po/ia/: kcm_firewall.po
po/id/: kcm_firewall.po
po/is/: kcm_firewall.po
po/it/: kcm_firewall.po
po/ja/: kcm_firewall.po
po/ka/: kcm_firewall.po
po/ko/: kcm_firewall.po
po/lt/: kcm_firewall.po
po/lv/: kcm_firewall.po
po/nl/: kcm_firewall.po
po/nn/: kcm_firewall.po
po/pa/: kcm_firewall.po
po/pl/: kcm_firewall.po
po/pt/: kcm_firewall.po
po/pt_BR/: kcm_firewall.po
po/ro/: kcm_firewall.po
po/ru/: kcm_firewall.po
po/sa/: kcm_firewall.po
po/sk/: kcm_firewall.po
po/sl/: kcm_firewall.po
po/sv/: kcm_firewall.po
po/ta/: kcm_firewall.po
po/tr/: kcm_firewall.po
po/ug/: kcm_firewall.po
po/uk/: kcm_firewall.po
po/zh_CN/: kcm_firewall.po
po/zh_TW/: kcm_firewall.po
tests/: CMakeLists.txt
tests/firewall_tests/: CMakeLists.txt  main.cpp
tests/firewalld_tests/: CMakeLists.txt  main.cpp
tests/ss_tests/: CMakeLists.txt  main.cpp
tests/ufw_tests/: CMakeLists.txt  main.cpp
